--- a/InvoiceService/InvoiceService.Console/Properties/Resources.resx
+++ b/InvoiceService/InvoiceService.Console/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Invoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\invoice.xlsx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="InvoiceXml" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\invoice.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;shift_jis</value>
+  </data>
   <data name="SelectInvoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sql\selectinvoice.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
